# caffe

./: .gitignore  CMakeLists.txt
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  Misc.cmake  ProtoBuf.cmake  Summary.cmake  Targets.cmake  Utils.cmake  WindowsDownloadPrebuiltDependencies.cmake  lint.cmake
cmake/Modules/: FindLevelDB.cmake  FindMKL.cmake  FindMatlabMex.cmake  FindOpenBLAS.cmake  FindSnappy.cmake  FindvecLib.cmake
docs/: CMakeLists.txt
docs/_layouts/: default.html
docs/stylesheets/: reset.css  styles.css
examples/: CMakeLists.txt
examples/cifar10/: cifar10_full_sigmoid_train_test_bn.prototxt  cifar10_full_solver.prototxt  cifar10_full_train_test.prototxt  cifar10_resnet.deploy.prototxt  cifar10_resnet.prototxt  cifar10_resnet_solver.prototxt  convert_cifar_data.cpp  convert_cifar_data_plus.cpp
examples/cpp_classification/: classification.cpp
examples/finetune_flickr_style/: assemble_data.py
examples/mnist/: convert_mnist_data.cpp  convert_mnist_data_plus.cpp  create_mnist.sh  lenet_train_test.prototxt
examples/pycaffe/layers/: pascal_multilabel_datalayers.py  pyloss.py
examples/siamese/: convert_mnist_siamese_data.cpp
examples/web_demo/: app.py
examples/web_demo/templates/: index.html
include/caffe/: blob.hpp  common.hpp  data_transformer.hpp  filler.hpp  internal_thread.hpp  layer.hpp  layer_factory.hpp  net.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp  syncedmem.hpp
include/caffe/layers/: absval_layer.hpp  accuracy_generic_layer.hpp  accuracy_layer.hpp  argmax_layer.hpp  base_conv_layer.hpp  batch_norm_layer.hpp  batch_reindex_layer.hpp  bias_layer.hpp  bnll_layer.hpp  clip_layer.hpp  concat_layer.hpp  contrastive_loss_layer.hpp  conv_layer.hpp  crop_layer.hpp  cudnn_conv_layer.hpp  cudnn_deconv_layer.hpp  cudnn_lcn_layer.hpp  cudnn_lrn_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_softmax_layer.hpp  cudnn_tanh_layer.hpp  data_layer.hpp  deconv_layer.hpp  dropout_layer.hpp  dummy_data_layer.hpp  eltwise_layer.hpp  elu_layer.hpp  embed_layer.hpp  euclidean_loss_layer.hpp  exp_layer.hpp  filter_layer.hpp  flatten_layer.hpp  focal_loss_layer.hpp  hdf5_data_layer.hpp  hdf5_output_layer.hpp  hinge_loss_layer.hpp  im2col_layer.hpp  image_data_layer.hpp  (+37 more)
include/caffe/test/: test_caffe_main.hpp  test_gradient_check_util.hpp
include/caffe/util/: backwards.hpp  benchmark.hpp  blocking_queue.hpp  data.hpp  db.hpp  db_leveldb.hpp  db_lmdb.hpp  format.hpp  gpu_util.cuh  hdf5.hpp  im2col.hpp  insert_splits.hpp  io.hpp  math_functions.hpp  rng.hpp  signal_handler.h  upgrade_proto.hpp
matlab/: CMakeLists.txt
matlab/+caffe/: Blob.m  Layer.m  Net.m  Solver.m  get_net.m  get_solver.m  io.m  reset_all.m  run_tests.m  set_device.m  set_mode_cpu.m  set_mode_gpu.m  version.m
matlab/+caffe/+test/: test_io.m  test_net.m  test_solver.m
matlab/+caffe/private/: CHECK.m  CHECK_FILE_EXIST.m  caffe_.cpp  is_valid_handle.m
matlab/demo/: classification_demo.m
matlab/hdf5creation/: demo.m  store2hdf5.m
python/: CMakeLists.txt  classify.py  detect.py  draw_net.py  train.py
python/caffe/: __init__.py  _caffe.cpp  coord_map.py  detector.py  draw.py  io.py  net_spec.py  pycaffe.py
python/caffe/test/: test_coord_map.py  test_draw.py  test_net.py  test_net_spec.py  test_python_layer.py  test_solver.py
scripts/: build_win.cmd  copy_notebook.py  cpp_lint.py  download_model_binary.py
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_transformer.cpp  internal_thread.cpp  layer.cpp  layer_factory.cpp  net.cpp  solver.cpp  syncedmem.cpp
src/caffe/layers/: absval_layer.cpp  absval_layer.cu  accuracy_generic_layer.cpp  accuracy_generic_layer.cu  accuracy_layer.cpp  accuracy_layer.cu  argmax_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  base_data_layer.cu  batch_norm_layer.cpp  batch_norm_layer.cu  batch_reindex_layer.cpp  batch_reindex_layer.cu  bias_layer.cpp  bias_layer.cu  bnll_layer.cpp  bnll_layer.cu  clip_layer.cpp  clip_layer.cu  concat_layer.cpp  concat_layer.cu  contrastive_loss_layer.cpp  contrastive_loss_layer.cu  conv_layer.cpp  conv_layer.cu  crop_layer.cpp  crop_layer.cu  cudnn_conv_layer.cpp  cudnn_deconv_layer.cpp  data_layer.cpp  deconv_layer.cpp  deconv_layer.cu  dropout_layer.cpp  dropout_layer.cu  dummy_data_layer.cpp  eltwise_layer.cpp  eltwise_layer.cu  elu_layer.cpp  elu_layer.cu  (+80 more)
src/caffe/proto/: caffe.proto
src/caffe/solvers/: adadelta_solver.cpp  adadelta_solver.cu  adagrad_solver.cpp  adagrad_solver.cu  adam_solver.cpp  adam_solver.cu  nesterov_solver.cpp  nesterov_solver.cu  rmsprop_solver.cpp  rmsprop_solver.cu  sgd_solver.cpp  sgd_solver.cu
src/caffe/test/: test_accuracy_layer.cpp  test_argmax_layer.cpp  test_batch_norm_layer.cpp  test_batch_reindex_layer.cpp  test_benchmark.cpp  test_bias_layer.cpp  test_blob.cpp  test_caffe_main.cpp  test_common.cpp  test_concat_layer.cpp  test_contrastive_loss_layer.cpp  test_convolution_layer.cpp  test_crop_layer.cpp  test_data_layer.cpp  test_data_transformer.cpp  test_dataplus.cpp  test_db.cpp  test_deconvolution_layer.cpp  test_dummy_data_layer.cpp  test_eltwise_layer.cpp  test_embed_layer.cpp  test_euclidean_loss_layer.cpp  test_filler.cpp  test_filter_layer.cpp  test_flatten_layer.cpp  test_gradient_based_solver.cpp  test_hdf5_output_layer.cpp  test_hdf5data_layer.cpp  test_hinge_loss_layer.cpp  test_im2col_kernel.cu  test_im2col_layer.cpp  test_image_data_layer.cpp  test_infogain_loss_layer.cpp  test_inner_product_layer.cpp  test_internal_thread.cpp  test_io.cpp  test_layer_factory.cpp  test_lrn_layer.cpp  test_lstm_layer.cpp  test_math_functions.cpp  (+28 more)
src/caffe/util/: benchmark.cpp  blocking_queue.cpp  data.cpp  (+12 more)
src/gtest/: gtest-all.cpp  gtest.h
tools/: CMakeLists.txt  caffe.cpp  compute_image_mean.cpp  compute_image_mean_plus.cpp  convert_imageset.cpp  extract_features.cpp  upgrade_net_proto_binary.cpp  upgrade_net_proto_text.cpp  upgrade_solver_proto_text.cpp
tools/extra/: parse_log.py  plot_training_log.py.example  resize_and_crop_images.py  summarize.py
tools/generic/: create_nsfw_dataset.cpp
(+22 files in other folders)
